--- a/Biesse/index.html
+++ b/Biesse/index.html
@@ -934,7 +934,7 @@
 </tr>
 <tr>
 <td style="text-align: left;">Ширина обрабатываемых панелей</td>
-<td style="text-align: left;">70 / 1000 мм</td>
+<td style="text-align: left;">70 - 1000 мм</td>
 </tr>
 <tr>
 <td style="text-align: left;">Толщина обрабатываемых панелей</td>
