--- a/HB622GP/index.html
+++ b/HB622GP/index.html
@@ -1138,30 +1138,86 @@
 <table>
 <thead>
 <tr>
-<th>Наименование параметров</th>
-<th>Значение параметров</th>
+<th style="text-align: left;">Наименование параметров</th>
+<th style="text-align: left;">Значение параметров</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>Габаритный размер станка</td>
-<td>5950x4780x2500</td>
+<td style="text-align: left;">Drilling combination unit</td>
+<td style="text-align: left;">Вертикальные сверлильные шпиндели (сверху): 12x2</td>
 </tr>
 <tr>
-<td>Габаритный размер заготовок</td>
-<td>min 30x120 / max L=650x3100, R=1210x3100</td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;">Вертикальные сверлильные шпиндели (снизу): 9x2</td>
 </tr>
 <tr>
-<td>Толщина заготовок</td>
-<td>9-55 мм</td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;">Горизонтальные сверлильные шпиндели по Х: (2+2)x2</td>
 </tr>
 <tr>
-<td>Скорость вращения шпинделя</td>
-<td>18000 об/мин</td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;">Горизонтальные сверлильные шпиндели по Y: (2+2)x2</td>
 </tr>
 <tr>
-<td>Номинальная мощность</td>
-<td>45 кВт</td>
+<td style="text-align: left;">Диапазон обрабатываемых размеров</td>
+<td style="text-align: left;">Минимальная ширина: 30 мм</td>
+</tr>
+<tr>
+<td style="text-align: left;"></td>
+<td style="text-align: left;">Максимальная ширина: L ≤ 650 мм, R ≤ 1210 мм</td>
+</tr>
+<tr>
+<td style="text-align: left;"></td>
+<td style="text-align: left;">Минимальная длина доски: 120 мм</td>
+</tr>
+<tr>
+<td style="text-align: left;"></td>
+<td style="text-align: left;">Максимальная длина: 3100 мм</td>
+</tr>
+<tr>
+<td style="text-align: left;"></td>
+<td style="text-align: left;">Минимальная толщина: 9 мм</td>
+</tr>
+<tr>
+<td style="text-align: left;"></td>
+<td style="text-align: left;">Максимальная толщина: &lt;55 мм</td>
+</tr>
+<tr>
+<td style="text-align: left;">Максимальная скорость позиционирования</td>
+<td style="text-align: left;">Скорость оси X/U 130 м/мин</td>
+</tr>
+<tr>
+<td style="text-align: left;"></td>
+<td style="text-align: left;">Скорость оси Y 100 м/мин</td>
+</tr>
+<tr>
+<td style="text-align: left;"></td>
+<td style="text-align: left;">Скорость оси Z 30 м/мин</td>
+</tr>
+<tr>
+<td style="text-align: left;"></td>
+<td style="text-align: left;">Скорость оси A 60 м/мин</td>
+</tr>
+<tr>
+<td style="text-align: left;"></td>
+<td style="text-align: left;">Скорость оси V 100 м/мин</td>
+</tr>
+<tr>
+<td style="text-align: left;"></td>
+<td style="text-align: left;">Скорость оси W 30 м/мин</td>
+</tr>
+<tr>
+<td style="text-align: left;">Максимальная скорость вращения шпинделя</td>
+<td style="text-align: left;">18000 об/мин</td>
+</tr>
+<tr>
+<td style="text-align: left;">Номинальная мощность</td>
+<td style="text-align: left;">45 кВт</td>
+</tr>
+<tr>
+<td style="text-align: left;">Габаритный размер станка</td>
+<td style="text-align: left;">5950x4780x2500</td>
 </tr>
 </tbody>
 </table>
@@ -1280,7 +1336,7 @@
 Товарный знак: HOLD<br>
 Страна происхождения: КИТАЙ<br>
 Страна производства: Китай
-Сайт: <a href="https://www.holdmac.com/ru/">holdmac.com</a>
+Сайт: <a href="https://www.holdmac.com/ru/">holdmac.com</a> <a href="https://www.holdmac.com/cnc-drilling-center-dual-station-six-sided-drilling-hb622gp.html">hb622gp</a>
 <link href="../stylesheets/itc-slider.css" rel="stylesheet"></p>
 <script src="../javascripts/itc-slider.js" defer></script></div>
 
