--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -566,6 +566,10 @@
 <li>
 <p><a href="/docs/Documentation/%D0%9A%D0%BE%D0%BE%D1%80%D0%B4%D0%B8%D0%BD%D0%B0%D1%82%D1%8B%20%D1%81%D1%82%D0%BE%D0%BB%D0%B0+%E2%84%96%20%D1%88%D0%BF%D0%B8%D0%BD%D0%B4%D0%B5%D0%BB%D1%8F.docx" target="_blank">Шаблон координаты стола + № шпинделя</a></p>
 </li>
+<li>
+<p><a href="%D0%9B%D0%BE%D0%B2%D1%8B%D0%B3%D0%B8%D0%BD%20%D0%90.%20%D0%90.,%20%D0%A2%D0%B5%D0%B2%D0%B5%D1%80%D0%BE%D0%B2%D1%81%D0%BA%D0%B8%D0%B9%20%D0%9B.%20%D0%92.%20-%20%D0%A1%D0%BE%D0%B2%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D0%BD%D1%8B%D0%B9%20%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%BA%20%D1%81%20%D0%A7%D0%9F%D0%A3%20%D0%B8%20CAD%20&amp;%20CAM%20%D1%81%D0%B8%D1%81%D1%82%D0%B5%D0%BC%D0%B0%20-%202012.pdf">Ловыгин А. А., Теверовский Л. В. - Современный станок с ЧПУ и CAD &amp; CAM система - 2012</a></p>
+</li>
+<li><a href="/docs/files/%D0%9A%D0%BD%D0%B8%D0%B3%D0%B0%20%D0%BF%D0%BE%20%D0%BA%D0%BE%D1%80%D0%BF%D1%83%D1%81%D0%BD%D0%BE%D0%B9%20%D0%BC%D0%B5%D0%B1%D0%B5%D0%BB%D0%B8.pdf">Леонов А. - Книга по корпусной мебели</a></li>
 </ul>
 <!-- # Документация для запуска
 
