--- a/Biesse/index.html
+++ b/Biesse/index.html
@@ -570,7 +570,7 @@
         
   
   <span class="md-ellipsis">
-    WEEKE BHC350 / Venture
+    Weeke
   </span>
   
 
@@ -633,7 +633,7 @@
         
   
   <span class="md-ellipsis">
-    5-ти шпиндельные фрезера
+    K-1325-C5
   </span>
   
 
@@ -913,6 +913,7 @@
 
 
 <div><h1 id="biesse-skipper-100">BIESSE Skipper 100</h1>
+<p>Обрабатывающий центр шестисторонний</p>
 <p><a class="glightbox" href="../images/592_n_biesse_skipper_100_cover.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Alt text" src="../images/592_n_biesse_skipper_100_cover.png"></a>
 Обрабатывающий центр SKIPPER 100 является станком для высококачественной, точной присадки изделий из плитного материала ЛДСП, МДФ. Станок оборудован двумя рабочими присадочными группами – нижней и верхней, имеющими в общей сложности 78 автономных инструментальных шпинделей. Станок может производить одновременную обработку двух панелей, причем, и сверху, и снизу в рамках одного рабочего цикла.</p>
 <h2 id="_1">Характеристики</h2>
