--- a/HB622GP/index.html
+++ b/HB622GP/index.html
@@ -470,7 +470,7 @@
         
   
   <span class="md-ellipsis">
-    WEEKE BHC350 / Venture
+    Weeke
   </span>
   
 
@@ -533,7 +533,7 @@
         
   
   <span class="md-ellipsis">
-    5-ти шпиндельные фрезера
+    K-1325-C5
   </span>
   
 
@@ -1069,7 +1069,7 @@
 
 
 <div><h1 id="hb622gp">HB622GP</h1>
-<p>Шестисторонний сверлильный станок с фрезерным блоком. Пароль: svjia</p>
+<p>Обрабатывающий центр шестисторонний. Пароль: svjia</p>
 <style>
     *,
     *::before,
