--- a/HRB 28-29/index.html
+++ b/HRB 28-29/index.html
@@ -561,7 +561,7 @@
         
   
   <span class="md-ellipsis">
-    WEEKE BHC350 / Venture
+    Weeke
   </span>
   
 
@@ -624,7 +624,7 @@
         
   
   <span class="md-ellipsis">
-    5-ти шпиндельные фрезера
+    K-1325-C5
   </span>
   
 
@@ -895,7 +895,7 @@
 
 
 <div><h1 id="hold-machinery-hb-2829">HOLD Machinery HB 28/29</h1>
-<p>Всратый 5 сторнний сверлильно-присадочный станок с ЧПУ. Пароль: 1111.</p>
+<p>Обрабатывающий центр пятисторонний. Пароль: 1111.</p>
 <ul>
 <li>мелкие детали лучше не сверлить</li>
 <li>отличается низкой точностью </li>
