--- a/Hinge Machine RT-2/index.html
+++ b/Hinge Machine RT-2/index.html
@@ -470,7 +470,7 @@
         
   
   <span class="md-ellipsis">
-    WEEKE BHC350 / Venture
+    Weeke
   </span>
   
 
@@ -578,7 +578,7 @@
         
   
   <span class="md-ellipsis">
-    5-ти шпиндельные фрезера
+    K-1325-C5
   </span>
   
 
@@ -806,7 +806,8 @@
 
   <h1>Hinge Machine RT 2</h1>
 
-<div><h2 id="_1">Инструкции</h2>
+<div><p>Фрезерный станок с ЧПУ для петли</p>
+<h2 id="_1">Инструкции</h2>
 <ul>
 <li><a href="../Hinge%20Machine%20RT-2%20Operate%20Instruction%20Manual.docx">Hinge Machine RT-2 Operate Instruction Manual</a></li>
 </ul></div>
