--- a/Nesting/index.html
+++ b/Nesting/index.html
@@ -615,7 +615,7 @@
         
   
   <span class="md-ellipsis">
-    WEEKE BHC350 / Venture
+    Weeke
   </span>
   
 
@@ -678,7 +678,7 @@
         
   
   <span class="md-ellipsis">
-    5-ти шпиндельные фрезера
+    K-1325-C5
   </span>
   
 
@@ -1003,7 +1003,7 @@
 
 
 <div><h1 id="sudiao-sd-2128">SUDIAO SD 2128</h1>
-<p>Трех осевой фрезерный станок с ЧПУ для нестинга со сверлильным блоком. 
+<p>Обрабатывающий центр с ЧПУ для нестинга (Трех осевой фрезерный станок с ЧПУ для нестинга со сверлильным блоком) 
 <br>
 <style>
     *,
