--- a/RMZ-7D/index.html
+++ b/RMZ-7D/index.html
@@ -470,7 +470,7 @@
         
   
   <span class="md-ellipsis">
-    WEEKE BHC350 / Venture
+    Weeke
   </span>
   
 
@@ -582,7 +582,7 @@
         
   
   <span class="md-ellipsis">
-    5-ти шпиндельные фрезера
+    K-1325-C5
   </span>
   
 
