--- a/SD2516/index.html
+++ b/SD2516/index.html
@@ -470,7 +470,7 @@
         
   
   <span class="md-ellipsis">
-    WEEKE BHC350 / Venture
+    Weeke
   </span>
   
 
@@ -533,7 +533,7 @@
         
   
   <span class="md-ellipsis">
-    5-ти шпиндельные фрезера
+    K-1325-C5
   </span>
   
 
@@ -947,7 +947,7 @@
       position: relative;
     }
 </style>
-<p>Двух осевой фрезерный станок с ЧПУ для нестинга с дополнительной фрезерной головой</p>
+<p>Обрабатывающий центр с ЧПУ для пакетного нестинга (Двух осевой фрезерный станок с ЧПУ для пакетного нестинга с дополнительной фрезерной головой)</p>
 <p><a class="glightbox" href="../images/sd2516/2516.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Image title" src="../images/sd2516/2516.png"></a></p>
 <h2 id="_1">Плюсы</h2>
 <ol>
