--- a/BF-550/index.html
+++ b/BF-550/index.html
@@ -470,7 +470,7 @@
         
   
   <span class="md-ellipsis">
-    WEEKE BHC350 / Venture
+    Weeke
   </span>
   
 
@@ -533,7 +533,7 @@
         
   
   <span class="md-ellipsis">
-    5-ти шпиндельные фрезера
+    K-1325-C5
   </span>
   
 
